--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,6 @@ embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/emb
 embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
 embassy-sync = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
+embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
+embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
 half = { version = "2.2.0", default_features = false, features = [] }
