--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,10 @@ embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",
 embassy-sync = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
 embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
 embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
+embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
+heapless = "0.7.15"
+static_cell = { version = "1.1", features = ["nightly"]}
+cyw43-pio = { path = "cyw43-pio", features = ["defmt", "overclock"] }
+cyw43 = { version = "0.1.0", path = "cyw43" }
 half = { version = "2.2.0", default_features = false, features = [] }
